--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>Hello World</h1>
     <p>This page is hosted using GitHub Pages!</p>
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
   </body>
 </html>
