--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    <p>This page is hosted using GitHub Pages!</p>
+    <p>Contents of paragraph 1</p>
+    <p>Contents of paragraph 2</p>
+    <img src="./images/franka_copelliasim.png" alt="Franka robot" />
     <!-- <script src="./script.js"></script> -->
   </body>
 </html>
