index.html modified

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Demo Project</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Math Example</title>
+    <script type="text/javascript" async
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>Contents of paragraph 1</p>
-    <p>Contents of paragraph 2</p>
-    <img src="./images/franka_copelliasim.png" alt="Franka robot" />
-    <!-- <script src="./script.js"></script> -->
+    <h1>Math Equations with MathJax</h1>
+    <p>The equation of a circle is \( x^2 + y^2 = r^2 \).</p>
+    <p>Here is the quadratic formula:</p>
+    <p>\[ ax^2 + bx + c = 0 \]</p>
   </body>
 </html>
