index.html modified

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Math Example</title>
+    <link rel="stylesheet" href="./style.css" />
     <script type="text/javascript" async
       src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
@@ -13,5 +14,6 @@
     <p>The equation of a circle is \( x^2 + y^2 = r^2 \).</p>
     <p>Here is the quadratic formula:</p>
     <p>\[ ax^2 + bx + c = 0 \]</p>
+    <img src="./images/franka_copelliasim.png" alt="Franka robot" />
   </body>
 </html>
