--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1>Math Equations with MathJax</h1>
-    <p>The equation of a circle is \( x^2 + y^2 = r^2 \).</p>
+    <p>The equation of a <strong>circle</strong> is \( x^2 + y^2 = r^2 \).</p>
     <p>Here is the quadratic formula:</p>
     <p>\[ ax^2 + bx + c = 0 \]</p>
     <img src="./images/franka_copelliasim.png" alt="Franka robot" />
